--- a/docs/index.css
+++ b/docs/index.css
@@ -87,22 +87,6 @@ a:active {
   text-decoration: none;
 }
 
-html {
-  font-size: 12px;
-}
-
-@media screen and (min-width: 32rem) and (max-width: 48rem) {
-  html {
-    font-size: 15px;
-  }
-}
-
-@media screen and (min-width: 48rem) {
-  html {
-    font-size: 16px;
-  }
-}
-
 body {
   line-height: 1.85;
 }
@@ -179,8 +163,8 @@ textarea {
 @import url(http://fonts.googleapis.com/css?family=Arimo:700,700italic);
 
 html {
-  font-size: 18px;
-  max-width: 100%;
+    font-size: 2vw;
+    max-width: 100%;
 }
 
 body {
@@ -231,6 +215,8 @@ iframe {
 .intrinsic-container {
     position: relative;
     height: 0;
+    margin: 0 auto;
+    width: 500px;
     overflow: hidden;
     padding-bottom: 56.25%;
 }
