--- a/docs/index.css
+++ b/docs/index.css
@@ -1,4 +1,4 @@
-/* from http://markdowncss.github.io/modest/ */
+/* from http://markdowncss.github.io/modest/
 
 @media print {
   *,
@@ -62,7 +62,6 @@
 
 pre,
 code {
-  font-family: Menlo, Monaco, "Courier New", monospace;
   font-size: 16px;
 }
 
@@ -94,7 +93,7 @@ body {
 p,
 .modest-p {
   font-size: 1rem;
-  margin-bottom: 1.3rem;
+  margin-bottom: 1rem;
 }
 
 h1,
@@ -105,9 +104,9 @@ h3,
 .modest-h3,
 h4,
 .modest-h4 {
-  margin: 1.414rem 0 .5rem;
+  margin: 1vw;
   font-weight: inherit;
-  line-height: 1.42;
+  line-height: 1;
 }
 
 h1,
@@ -157,24 +156,72 @@ select,
 textarea {
   max-width: 100%;
 }
+img {
+  max-width: 800px;
+  width: 80%;
+}
+.logo {
+  text-align: center;
+  max-width: 48rem;
+}
+.browser {
+  max-width: 700px;
+  width: 70vw;
+}
+code {
+  width: 80%;
+}
+p {
+  text-align: justify;
+  margin: 5%;
+}
+
+.span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  max-width: 400px;
+  height: 5vh;
+}
+span {
+  text-align: center;
+  width: 50%;
+}
+
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700);
 
 @import url(http://fonts.googleapis.com/css?family=Arimo:700,700italic);
 
-html {
+/* html {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 2vw;
     max-width: 100%;
-}
+} */
 
 body {
   color: #444;
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: 300;
-  margin: 0 auto;
-  max-width: 48rem;
+  margin: 0;
   line-height: 1.45;
-  padding: .25rem;
+}
+
+#content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#demo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 h1,
@@ -189,52 +236,56 @@ h6 {
 h1,
 h2,
 h3 {
-  border-bottom: 2px solid #fafafa;
-  margin-bottom: 1.15rem;
-  padding-bottom: .5rem;
+  border-bottom: 2px solid blue;
+  /* margin-bottom: 1.15rem; */
+  /* padding-bottom: .5rem; */
   text-align: center;
 }
 
-blockquote {
-  border-left: 8px solid #fafafa;
+/* blockquote {
+  border-left: 10px solid #fafafa;
   padding: 1rem;
-}
+} */
 
 pre,
 code {
-  background-color: #fafafa;
+  background-color: #e6d5f7;
  }
 
-iframe { 
-    border: 0;
-    display: block;
-    margin: 0 auto;
+pre {
+  margin: 0;
 }
+
+/* iframe { 
+    transform: translateX(5%);
+    border: 0;
+    margin: 0;
+} */
 
 /* adapted from https://benmarshall.me/responsive-iframes/ */
-.intrinsic-container {
+/* .intrinsic-container {
     position: relative;
-    height: 0;
-    margin: 0 auto;
-    width: 70vw;
+    height: 50%;
+    margin: 0;
+    width: 100%;
     overflow: hidden;
-    padding-bottom: 56.25%;
-}
+    padding-bottom: 50%;
+} */
 
 .intrinsic-container iframe {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    max-width: 700px;
+    width: 70vw;
+    height: 30vh;
 }
-
 h6 {
-    margin-top: -14px;
-    margin-bottom: 8px;
-    text-align: center;
+  font-size: 2vw;
 }
+/* h6 {
+    text-align: center;
+} */
 
 .github-corner:hover .octo-arm {
-    animation:octocat-wave 560ms ease-in-out
+    animation:octocat-wave 600ms ease-in-out
 }
 
 @keyframes octocat-wave {
@@ -254,6 +305,18 @@ h6 {
         animation:none
     }
     .github-corner .octo-arm {
-        animation:octocat-wave 560ms ease-in-out
+        animation:octocat-wave 600ms ease-in-out
     }
+}
+@media (min-width:1000px) {
+  p {
+    margin: 35px;
+    max-width: 900px;
+  }
+  .logo {
+    margin: 60px;
+  }
+  h6 {
+    font-size: 2.5vh;
+  }
 }
